trunk/Archive2/a2/cbfaf7ec6746f4/output
main.cpp: In instantiation of 'struct is_const_reference_type<thing&>':
main.cpp:36:67:   required from here
main.cpp:7:22: error: forming reference to reference type 'thing&'
     typedef T&       reference_type;
                      ^
main.cpp:8:22: error: forming reference to reference type 'thing&'
     typedef const T& const_reference_type;
                      ^
